Reupload of files

--- a/Item Splitting with Test and Train.ipynb
+++ b/Item Splitting with Test and Train.ipynb
@@ -187,8 +187,7 @@
     "import math\n",
     "from scipy.stats import ttest_ind, ttest_ind_from_stats\n",
     "\n",
-    "data = pd.read_csv('../Research Project/namesR.csv', low_memory=False)\n",
-    "data.head()"
+    "data = pd.read_csv('../Research Project/namesR.csv', low_memory=False)\n"
    ]
   },
   {
