--- a/KNN Methods Test and Train.ipynb
+++ b/KNN Methods Test and Train.ipynb
@@ -187,8 +187,7 @@
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "import math\n",
     "\n",
-    "data = pd.read_csv('../Research Project/namesR.csv', low_memory=False)\n",
-    "data.head()"
+    "data = pd.read_csv('../Research Project/namesR.csv', low_memory=False)\n"
    ]
   },
   {
