--- a/Matrix Factorization with and without Personality Test and Train.ipynb
+++ b/Matrix Factorization with and without Personality Test and Train.ipynb
@@ -186,8 +186,7 @@
     "from sklearn.decomposition import PCA\n",
     "import math\n",
     "\n",
-    "data = pd.read_csv('../Research Project/namesR.csv', low_memory=False)\n",
-    "data.head()"
+    "data = pd.read_csv('../Research Project/namesR.csv', low_memory=False)\n"
    ]
   },
   {
