--- a/Item Splitting with Test and Train.ipynb
+++ b/Item Splitting with Test and Train.ipynb
@@ -6,176 +6,12 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>user</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>age</th>\n",
-       "      <th>marriage</th>\n",
-       "      <th>country</th>\n",
-       "      <th>openness</th>\n",
-       "      <th>conscientiousness</th>\n",
-       "      <th>extraversion</th>\n",
-       "      <th>agreeableness</th>\n",
-       "      <th>neuroticism</th>\n",
-       "      <th>item</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>app</th>\n",
-       "      <th>data</th>\n",
-       "      <th>ease</th>\n",
-       "      <th>type</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>25-30</td>\n",
-       "      <td>0</td>\n",
-       "      <td>india</td>\n",
-       "      <td>6</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>DB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>25-30</td>\n",
-       "      <td>0</td>\n",
-       "      <td>india</td>\n",
-       "      <td>6</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>DB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>25-30</td>\n",
-       "      <td>0</td>\n",
-       "      <td>india</td>\n",
-       "      <td>6</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>DB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>25-30</td>\n",
-       "      <td>0</td>\n",
-       "      <td>india</td>\n",
-       "      <td>6</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>DB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>25-30</td>\n",
-       "      <td>0</td>\n",
-       "      <td>india</td>\n",
-       "      <td>6</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>DB</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0  user  gender    age  marriage country  openness  \\\n",
-       "0           0     1       0  25-30         0   india         6   \n",
-       "1           1     1       0  25-30         0   india         6   \n",
-       "2           2     1       0  25-30         0   india         6   \n",
-       "3           3     1       0  25-30         0   india         6   \n",
-       "4           4     1       0  25-30         0   india         6   \n",
-       "\n",
-       "   conscientiousness  extraversion  agreeableness  neuroticism  item  rating  \\\n",
-       "0                  3             5              3            4     1       5   \n",
-       "1                  3             5              3            4     4       5   \n",
-       "2                  3             5              3            4     8       4   \n",
-       "3                  3             5              3            4     5       2   \n",
-       "4                  3             5              3            4     6       2   \n",
-       "\n",
-       "   app  data  ease type  \n",
-       "0    5     5     5   DB  \n",
-       "1    5     5     5   DB  \n",
-       "2    4     4     4   DB  \n",
-       "3    2     2     2   DB  \n",
-       "4    2     2     2   DB  "
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n"
+     ]
     }
    ],
    "source": [
