--- a/Matrix Factorization with and without Personality Test and Train.ipynb
+++ b/Matrix Factorization with and without Personality Test and Train.ipynb
@@ -164,6 +164,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Matrix Factorization with Personality"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -525,6 +532,13 @@
     "print(rmse2)\n",
     "print(rmse3)\n",
     "print(rmse4)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Matrix Factorization with no Personality"
    ]
   },
   {
