--- a/Item Splitting with Test and Train.ipynb
+++ b/Item Splitting with Test and Train.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -23,15 +14,7 @@
     "import math\n",
     "from scipy.stats import ttest_ind, ttest_ind_from_stats\n",
     "\n",
-    "data = pd.read_csv('../Research Project/namesR.csv', low_memory=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "data = pd.read_csv('../Research Project/namesR.csv', low_memory=False)\n",
     "users = pd.Series(data.user).unique()\n",
     "items = pd.Series(data.item).unique()\n",
     "items = np.sort(items)\n",
